[package]
name = "mojo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mojokv = {path="../mojokv"}
log = "0.4.17"
env_logger = "0.9.0"
clap = {version="3.2.6", features=["derive"] }
anyhow = "1.0.58"