[package]
name = "mojofs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "lib"]

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.9.0"

[dependencies]
libsqlite3-sys = {version = "0.24.2", features = ["bundled"]}
thiserror = "1.0.31"
parking_lot = "0.12.1"
mojokv = {path = "../mojokv"}
nix = "0.24"
log = "0.4.17"
env_logger = "0.9.0"