[package]
name = "mojokv"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mojoio = {path="../mojoio"}
modular-bitfield = "0.11"
lz4 = "1.23.3"
zstd = "0.11.2"
thiserror = "1.0.31"
log = "0.4.17"
env_logger = "0.9.0"
rand = "0.8.5"
clap = {version="3.2.6", features=["derive"] }
anyhow = "1.0.58"
parking_lot = {version = "0.12", features=["serde"]}
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rmp-serde = "1.1.0"
fslock = "0.2.1"